fix(tabs): fix inline-tabs-fullbleed not working without styles in global stylesheet
Styles were incorrectly added to the global stylesheet before, causing the webcomponent to work when
it wouldnt if the styles were only added inside the shadowdom of the webcomponent itself. This
change uses the ::slotted() css selector to pierce the shadow dom and style the tabs from within the
webcomponents shadow dom.

--- a/tegel/src/components/tabs/inline-tabs-fullbleed/inline-tabs-fullbleed.scss
+++ b/tegel/src/components/tabs/inline-tabs-fullbleed/inline-tabs-fullbleed.scss
@@ -100,7 +100,9 @@
     justify-content: center;
   }
 
-  &--tab {
+  /* tab */
+  ::slotted(&--tab) {
+    //fixme: headline-07 has a line-height that is not matching old storybook
     font: var(--sdds-headline-07);
     letter-spacing: var(--sdds-headline-07-ls);
     color: rgb(0 21 51 / 60%);
@@ -112,14 +114,6 @@
     transition: color 0.15s ease-in-out;
     white-space: nowrap;
     text-align: left;
-
-    &:first-child {
-      margin-left: 32px;
-    }
-
-    &:last-child {
-      margin-right: 32px;
-    }
 
     &::after {
       content: ' ';
@@ -135,46 +129,51 @@
       transition: width 0.15s ease-in-out;
       z-index: 10;
     }
+  }
 
-    /* states */
+  ::slotted(&--tab:first-child) {
+    margin-left: 32px;
+  }
 
-    &:hover {
-      color: var(--sdds-blue-958);
+  ::slotted(&--tab:last-child) {
+    margin-right: 32px;
+  }
 
-      &::after {
-        width: 100%;
-      }
+  /* tab states */
+  ::slotted(&--tab:hover) {
+    color: var(--sdds-blue-958);
+
+    &::after {
+      width: 100%;
     }
+  }
 
-    &:focus {
-      @include sdds-focus-state;
+  ::slotted(&--tab:focus) {
+    @include sdds-focus-state;
 
-      color: var(--sdds-grey-958);
+    color: var(--sdds-grey-958);
 
-      &::after {
-        width: 0;
-      }
+    &::after {
+      width: 0;
     }
+  }
 
-    &__active {
-      color: var(--sdds-blue-958);
+  ::slotted(&--tab__active) {
+    color: var(--sdds-blue-958);
 
-      &::after {
-        width: 100%;
-        background-color: var(--sdds-blue-400);
-      }
-
-      &:focus {
-        &::after {
-          width: 100%;
-        }
-      }
+    &::after {
+      width: 100%;
+      background-color: var(--sdds-blue-400);
     }
+  }
 
-    &__disabled {
-      color: rgb(0 21 51 / 38%);
-      pointer-events: none;
-    }
+  ::slotted(&--tab__active:focus)::after {
+    width: 100%;
+  }
+
+  ::slotted(&--tab__disabled) {
+    color: rgb(0 21 51 / 38%);
+    pointer-events: none;
   }
 }
 
